fix: don't break in-game avatars on newlines

--- a/react_main/src/css/game.css
+++ b/react_main/src/css/game.css
@@ -284,6 +284,7 @@
 
 .game .message .content,
 .gameMessageContent {
+  display: inline;
   /*display: flex;*/
   /*flex-flow: row wrap;*/
 
